# datafusion_log_reader

./: .gitattributes  .gitignore  Cargo.toml  README.md
benches/: reader_bench.rs
examples/: simple.rs
src/: context.rs  datasource.rs  execution_plan.rs  lib.rs  reader_options.rs
tests/: reader.rs
